Keep cloud quoting out of local admission